# news_search

./: .README.md.swp  Claude.md  GOOGLE_SEARCH_SETUP.md  PRD.md  README.md  debug_bing_parsing.py  debug_google_html.py  debug_google_role_heading.py  google_trump.html  google_trump_news.html  pyproject.toml  setup_google_search.py  test_google_proxy.py  test_google_requests.py
config/: default.yaml  user_config.yaml
data/: news_20250728_030320_AI.json  news_20250801_012739_trump.json  news_20250801_012903_AI.json  news_20250801_012949_AI.csv  news_20250801_013416_trump.json  news_20250801_013656_trump.json  news_20250801_013921_trump.json  news_20250801_014036_trump.json  news_20250801_014912_trump.json  news_20250801_015025_trump.json  news_20250801_023010_trump.json  news_20250801_023016_trump.json  news_20250801_023133_trump.json  news_20250801_023259_trumpprotest.json  news_20250802_152348_sitereuters.comafter2025-08-01trumpprotest.json  news_20250809_171650_trump.json  news_20250809_210605_dfrobotwiki.json
src/news_agent/: __init__.py
src/news_agent/cli/: commands.py  main.py
src/news_agent/core/: config.py  scheduler.py
src/news_agent/core/data_sources/: __init__.py  base.py  bing_search.py  google_search.py  news_api.py  rss.py  search_engine.py
src/news_agent/storage/: base.py  csv_storage.py  json_storage.py  manager.py  parquet_storage.py
temp/: debug_bing.py  debug_bing_english.py  request.py
tests/: test_bing_proxy.py  test_bing_search.py
